@@ -1,5 +1,6 @@
 package com.practice.board.service;
 
+import com.practice.board.dto.PaginationDto;
 import com.practice.board.dto.PostRequestDto;
 import com.practice.board.dto.PostResponseDto;
 import com.practice.board.entity.Post;
@@ -11,15 +12,14 @@ import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
 import jakarta.transaction.Transactional;
 import lombok.RequiredArgsConstructor;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Sort;
 import org.springframework.stereotype.Service;
-import org.springframework.web.bind.annotation.RequestParam;
 
 import java.time.LocalDateTime;
 import java.time.temporal.ChronoUnit;
 import java.util.List;
-import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -41,18 +41,53 @@ public class PostServiceImpl {
      * 포스트 리스트 조회
      */
     public List<PostResponseDto> findAll() {
+        //최근 포스트 부터 보이도록 내림차순으로 정렬
         Sort sort = Sort.by(Sort.Direction.DESC, "id", "createdDate");
         List<Post> list = postRepository.findAll(sort);
-        return list.stream().map(PostResponseDto::new).collect(Collectors.toList());
+        return list.stream().map(PostResponseDto::new).toList();
+    }
+
+    /**
+     * 포스트 페이지네이션으로 조회
+     */
+    public Page<PostResponseDto> findPageByAll(String page, int recodeSize) {
+        //최근 포스트 부터 보이도록 내림차순으로 정렬
+        Sort sort = Sort.by(Sort.Direction.DESC, "id", "createdDate");
+
+        Page<Post> postPage = postRepository.findPageByAll(PageRequest.of(Integer.parseInt(page) - 1, recodeSize, sort));
+
+        return postPage.map(Post -> new PostResponseDto(Post));
+    }
+
+    /**
+     * 포스트 페이지네이션 관련 정보가 있는 Dto 반환
+     */
+    public PaginationDto getPaginationDto(String page, int recodeSize, int pageSize) {
+        PaginationDto paginationDto = new PaginationDto();
+        paginationDto.setPage(Integer.parseInt(page));
+        paginationDto.setTotalPage(findTotalPage(recodeSize));
+        paginationDto.setRecodeSize(recodeSize);
+        paginationDto.setStartPage((Integer.parseInt(page)/(pageSize + 1))*pageSize + 1);
+        paginationDto.setLastPage((paginationDto.getStartPage() + (pageSize - 1)) < paginationDto.getTotalPage() ? (paginationDto.getStartPage() + (pageSize - 1)) : paginationDto.getTotalPage());
+        paginationDto.setPageSize(pageSize);
+        return paginationDto;
+    }
+
+    /**
+     * 포스트의 전체 페이지 개수 조회
+     */
+    public int findTotalPage(int recodeSize) {
+        //삭제여부 false 인 행 갯수 가져오기
+        int count = postRepository.CountByDeleteYesOrNo(false).intValue();
+        return (count % recodeSize == 0 ? count / recodeSize : (count / recodeSize) + 1);
     }
 
     /**
      * 포스트 id로 조회
      */
     public PostResponseDto findById(Long id) {
-        Optional<Post> post = postRepository.findById(id);
-        PostResponseDto postResponseDto = new PostResponseDto(post.get());
-        return postResponseDto;
+        Post post = postRepository.findById(id).orElseThrow(() -> new CustomException(ErrorCode.POSTS_NOT_FOUND));
+        return new PostResponseDto(post);
     }
 
     /**
@@ -113,6 +148,3 @@ public class PostServiceImpl {
         return (int) now.until(tomorrow, ChronoUnit.SECONDS);
     }
 }
-
-
-
